--- a/templates/index.html
+++ b/templates/index.html
@@ -92,8 +92,10 @@
             </div>
 
             <button class="btn btn-primary" type="submit">Submit</button>
-
+            <button class="btn btn-primary" id="updateDatabaseBtn" onclick="updateDatabase()">Update Database &
+                Submit</button>
         </form>
+
 
     </div>
 
@@ -101,5 +103,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+<script>
+    function updateDatabase() {
+        // Fetch data from the /update_database route
+        fetch('/update_database')
+            .then(response => response.json())
+            .then(data => {
+                // Handle the response as needed
+                alert(data.message); // Display a message or update the UI
+            });
+    }
+</script>
 
 </html>
