Added update db functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,15 @@
             color: #6c757d;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0WNHNNBETS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-0WNHNNBETS');
+    </script>
 </head>
 
 
