--- a/templates/index.html
+++ b/templates/index.html
@@ -101,9 +101,9 @@
             </div>
 
             <button class="btn btn-primary" type="submit">Submit</button>
-            <button class="btn btn-primary" id="updateDatabaseBtn" onclick="updateDatabase()">Update Database &
-                Submit</button>
         </form>
+        <!-- <button class="btn btn-primary" id="updateDatabaseBtn" onclick="updateDatabase()">Update Database &
+            Submit</button> -->
 
 
     </div>
