--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,15 +16,41 @@
         gtag('js', new Date());
         gtag('config', 'G-0WNHNNBETS');
     </script>
+    <style>
+        /* Add your styles here */
+        .spinner {
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-left: 4px solid green;
+            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            animation: spin 1s linear infinite;
+            margin: auto;
+            margin-top: 20px;
+            display: none;
+            /* Initially hidden */
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
 
 </head>
 
 <body>
+
     <div class="container text-center">
         <h1>Reddit Sentiment - Price Dashboard - {{ pair }}</h1>
-        <h2>Days Range: {{ days }}</h2>
+        <h2>Range: {{ days }}</h2>
     </div>
-
+    <div id="spinner" class="spinner"></div>
     <div class="container text-center">
         <div class="row">
             <div class="col-md">
@@ -53,11 +79,14 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Fetch data from the /get_data route with parameters
+            // Show spinner while data is being fetched
+            const spinner = document.getElementById('spinner');
+            spinner.style.display = 'block';
             fetch(`/get_data?pair={{ pair }}&days={{ days }}`)
                 .then(response => response.json())
                 .then(data => {
-
-                    console.log(data);
+                    // Hide spinner when data is loaded
+                    spinner.style.display = 'none';
                     // Call functions to create plots
                     createSentimentPricePlot(data.sentiment_price_data);
                     createPostsPerDayPlot(data.posts_per_day_data);
